--- a/BlogWeb1/BlogWeb1.csproj
+++ b/BlogWeb1/BlogWeb1.csproj
@@ -138,6 +138,7 @@
     <Content Include="Views\Post\Index.cshtml" />
     <Content Include="Views\Error\NotFound.cshtml" />
     <Content Include="Views\Post\Novo.cshtml" />
+    <Content Include="Views\Post\Vizualisa.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
