--- a/BlogWeb1/BlogWeb1.csproj
+++ b/BlogWeb1/BlogWeb1.csproj
@@ -122,6 +122,19 @@
     </Compile>
     <Compile Include="Infra\BlogContext.cs" />
     <Compile Include="Infra\ConnectionFactory.cs" />
+    <Compile Include="Migrations\201807270132093_InitialCreate.cs" />
+    <Compile Include="Migrations\201807270132093_InitialCreate.Designer.cs">
+      <DependentUpon>201807270132093_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201807281646098_Inicial.cs" />
+    <Compile Include="Migrations\201807281646098_Inicial.Designer.cs">
+      <DependentUpon>201807281646098_Inicial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201807282259419_AddInfoPublicacao.cs" />
+    <Compile Include="Migrations\201807282259419_AddInfoPublicacao.Designer.cs">
+      <DependentUpon>201807282259419_AddInfoPublicacao.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Post.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -146,7 +159,17 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201807270132093_InitialCreate.resx">
+      <DependentUpon>201807270132093_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807281646098_Inicial.resx">
+      <DependentUpon>201807281646098_Inicial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807282259419_AddInfoPublicacao.resx">
+      <DependentUpon>201807282259419_AddInfoPublicacao.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
