--- a/BlogWeb1/BlogWeb1.csproj
+++ b/BlogWeb1/BlogWeb1.csproj
@@ -160,7 +160,7 @@
     <Content Include="Views\Post\Index.cshtml" />
     <Content Include="Views\Error\NotFound.cshtml" />
     <Content Include="Views\Post\Novo.cshtml" />
-    <Content Include="Views\Post\Vizualisa.cshtml" />
+    <Content Include="Views\Post\Visualiza.cshtml" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
     <None Include="Web.Debug.config">
